# nullcal

./: .gitignore  .gitlab-ci.yml  .ignore_words.txt  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  cliff.toml  cspell.json  environment.yml  pyproject.toml  renovate.json  setup.py  test_requirements.txt  zensical.toml
.github/workflows/: CI.yml  documentation.yml  publish.yml  publish_testpypi.yml  schedule-update-actions.yml  scheduled_release.yml  semantic-pr-check.yml
.gitlab/issue_templates/: generic_task.md  version_release.md  weekly_tasks.md
docs/: conf.py  index.md  index.rst  requirements.txt  security.md
docs/dev/: architecture.md
docs/reference/: index.md
docs/reference/nullcal/: index.md  version.md
docs/reference/nullcal/clustering/: base.md  index.md  injection.md  precompute.md  single.md  time_frequency_map.md
docs/reference/nullcal/likelihood/: index.md  recalibration_likelihood.md
docs/reference/nullcal/metadata/: index.md  yaml.md
docs/reference/nullcal/null_stream/: calibration.md  index.md  null_stream.md  projector.md  whiten.md
docs/reference/nullcal/prior/: index.md  prior.md
docs/reference/nullcal/result/: index.md  result.md  utils.md
docs/reference/nullcal/time_frequency_transform/: index.md  inverse_wavelet_freq_funcs.md  inverse_wavelet_time_funcs.md  stft.md  transform_freq_funcs.md  transform_time_funcs.md  utils.md  wavelet_transforms.md
docs/reference/nullcal/utils/: index.md  log.md  snr.md
docs/user-guide/: installation.md  quickstart.md
nullcal/: __init__.py  likelihood.py  networks.py
nullcal/calibration_model/: __init__.py  constant.py
nullcal/clustering/: __init__.py  single.py  time_frequency_map.py
nullcal/detector/: networks.py
nullcal/likelihood/: base.py  likelihood.py  projector.py  time_frequency_likelihood.py  utility.py
nullcal/metadata/: __init__.py  yaml.py
nullcal/null_stream/: __init__.py  calibration.py  null_stream.py  projector.py  whiten.py
nullcal/postprocess/: posterior_fit.py
nullcal/prior/: __init__.py  dict.py  diff_gaussian.py  gaussian_fit.py  prior.py  ratio_gaussian.py
nullcal/psd/: __init__.py  mean.py  median.py
nullcal/recalibration/: base.py  cubic_spline.py  identity.py
nullcal/response_function_generator/: __init__.py  base.py  cubic_spline.py  triangular.py
nullcal/result/: result.py
nullcal/time_frequency_transform/: README.md  fft_funcs.py  inverse_wavelet_freq_funcs.py  inverse_wavelet_time_funcs.py  transform_freq_funcs.py  transform_time_funcs.py  wavelet_transforms.py
nullcal/tools/: create_injection.py  create_time_frequency_filter_from_sample.py  data_generation.py  default_config_create_injection.ini  default_config_create_time_frequency_filter_from_sample.ini  main.py  nullcal_pipe.py  parser.py  utility.py
nullcal/utility/: __init__.py  log.py
nullcal/utils/: __init__.py  geometry.py  log.py  snr.py  whiten.py
src/nullcal/: __init__.py  version.py
src/nullcal/calibration_model/: __init__.py  constant.py
src/nullcal/clustering/: __init__.py  base.py  injection.py  precompute.py  single.py  time_frequency_map.py
src/nullcal/detector/: networks.py
src/nullcal/likelihood/: __init__.py  base.py  likelihood.py  likelihood_debug.py  projection.py  projector.py  recalibration_likelihood.py  time_frequency_likelihood.py  utility.py
src/nullcal/metadata/: __init__.py  yaml.py
src/nullcal/null_stream/: __init__.py  calibration.py  null_stream.py  projector.py  whiten.py
src/nullcal/postprocess/: posterior_fit.py
src/nullcal/prior/: __init__.py  diff_gaussian.py  gaussian_fit.py  prior.py  ratio_gaussian.py
src/nullcal/psd/: __init__.py  mean.py  median.py
src/nullcal/result/: __init__.py  result.py  utils.py
src/nullcal/time_frequency_transform/: README.md  __init__.py  fft_funcs.py  gsl_wrapper.py  inverse_wavelet_freq_funcs.py  inverse_wavelet_time_funcs.py  stft.py  transform_freq_funcs.py  transform_time_funcs.py  utils.py  wavelet_transforms.py
src/nullcal/tools/: create_injection.py  create_time_frequency_filter_from_sample.py  data_generation.py  default_config_create_injection.ini  default_config_create_time_frequency_filter_from_sample.ini  main.py  parser.py  utility.py
src/nullcal/utils/: __init__.py  geometry.py  log.py  snr.py
src/nullcal/utils/degeneracy/: degeneracy_plane.py
test/: import_test.py
test/clustering/: single.py
test/likelihood/: projector_test.py  time_frequency_likelihood_profile.py  time_frequency_likelihood_test.py
test/prior/: diff_gaussian_test.py  ratio_gaussian_test.py
test/time_frequency_transform/: wavelet_transforms_test.py
test/tools/: create_injection_test.py  create_time_frequency_filter_from_sample_test.py  mock_test.txt
tests/: smoke_test.py
tests/likelihood/: test_likelihood.py  test_projection.py  test_recalibration_likelihood.py
tests/null_stream/: test_null_stream.py  test_projector.py  test_whiten.py
tests/result/: test_result.py
tests/time_frequency_transform/: test_stft.py
