[build-system]
requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nullcal"
version = "0.4.0"
description = "A package to estimate the calibration parameters for gravitational-wave measurements using null stream."
authors = [{name="Isaac C.F. Wong",email="chunfung.wong@kuleuven.be"}]
license = {file="LICENSE"}
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.18.1",
    "bilby>=2.3.0",
    "numba",
    "scipy",
    "ConfigArgParse",
    "pycbc",
    "healpy",
    "rocket-fft",
]

[project.optional-dependencies]
# test suite
test = [
    "coverage[toml] >=5.0",
    "pytest >=3.9.1",
    "pytest-cov >=2.4.0",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
write_to = "nullcal/_version.py"
version_scheme = "post-release"  # Use 'post-release' or 'guess-next-dev'
local_scheme = "node-and-date"   # This includes the full commit hash in the version

[project.scripts]
nullcal-create-injection = "nullcal.tools.create_injection:main"
nullcal-create-time-frequency-filter-from-sample = "nullcal.tools.create_time_frequency_filter_from_sample:main"
