[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nullcal"
authors = [
  { name = "Isaac C. F. Wong", email = "chunfung.wong@kuleuven.be" },
  { name = "Milan Wils", email = "milan.wils@kuleuven.be" },
  { name = "Francesco Cireddu", email = "francesco.cireddu@kuleuven.be" },
]
description = "A package to constrain calibration errors of a closed-geometry network of gravitational-wave detectors."
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "numpy>=1.18.1",
  "nptyping",
  "bilby>=2.3.0",
  "bilby_pipe",
  "numba",
  "scipy",
  "ConfigArgParse",
  "pycbc",
  "healpy",
  "rocket-fft",
  "tables",
]

[project.scripts]

[project.optional-dependencies]
spark = ["pyspark>=3.0.0"]

[project.urls]
Source = "https://github.com/Leuven-Gravity-Institute/nullcal"
Tracker = "https://github.com/Leuven-Gravity-Institute/nullcal/issues"

[dependency-groups]
dev = [
  "prek",
  "pytest>=9",
  "pytest-cov",
  "pytest-mock",
  "pytest-github-actions-annotate-failures",
]
docs = ["sphinx"]
release = ["git-cliff"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/nullcal"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]

[tool.coverage.report]
fail_under = 0

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"
executionEnvironments = [{ root = "src" }]

[tool.pytest.ini_options]
addopts = "--cov=nullcal --cov-report=xml --cov-report=term --cov-append -m 'not integration'"
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit2"
markers = [
  "integration: marks as integration test",
  "notebooks: marks as notebook test",
  "gpu: marks as gpu test",
  "spark: marks tests which need Spark",
  "slow: marks tests as slow",
  "unit: fast offline tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = unit, integration, spark, all

[testenv:unit]
commands =
    pytest -m "unit" {posargs}

[testenv]
commands =
    pytest -m "not integration and not spark" {posargs}

[testenv:integration]
commands =
    pytest -m "integration" {posargs}

[testenv:spark]
extras = spark
setenv =
       PYSPARK_DRIVER_PYTHON = {envpython}
       PYSPARK_PYTHON = {envpython}
commands =
    pytest -m "spark" {posargs}

[testenv:all]
extras = all
setenv =
       PYSPARK_DRIVER_PYTHON = {envpython}
       PYSPARK_PYTHON = {envpython}
commands =
    pytest {posargs}
"""

[tool.ruff]
line-length = 120
target-version = "py310"
lint.extend-select = [
  "E",
  "F",
  "W",   # pycodestyle errors and warnings
  "I",   # isort rules
  "UP",  # pyupgrade rules
  "C90", # McCabe complexity
  "N",   # PEP8 naming
  "B",   # Bugbear (opinionated checks)
  "A",   # Flake8-builtins
  "C4",  # Flake8-comprehensions
  "PT",  # Flake8-pytest
  "RUF", # Ruff-specific rules
  "PL",  # Pylint rules
  "SIM", # Similarities
  "T10", # Debugger statements
  "S",   # Security rules
]
lint.ignore = [
  "E501", # Line length (handled by formatter)
  "C901", # Overly strict complexity
]
lint.pylint.max-args = 10
fix = true
exclude = ["docs/conf.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG001", "PLC0415", "PLR2004"]
